--- a/2-counter-twa/package.json
+++ b/2-counter-twa/package.json
@@ -17,6 +17,7 @@
     "@ton/ton": "^15.2.1",
     "@tonconnect/ui": "^2.0.11",
     "@tonconnect/ui-react": "^2.0.11",
+    "@twa-dev/sdk": "^8.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.7",
