--- a/5-vesting/package.json
+++ b/5-vesting/package.json
@@ -5,7 +5,7 @@
         "start": "blueprint run",
         "build": "blueprint build",
         "test": "jest --verbose",
-        "transfer": "ts-node scripts/transfer.ts"
+        "transfer": "ts-node scripts/helpers/transfer.ts"
     },
     "devDependencies": {
         "@ton/blueprint": "^0.28.0",
